added disable push button

--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -90,10 +90,10 @@
                 </button>
             </div>   
             <div class="col-sm btn-push-enabled hidden">
-                <button type="button" class="btn btn-default btn-block btn-device" disabled="disabled">
-                    <i class="fa fa-bell" aria-hidden="true"></i>
+                <button type="button" class="btn btn-default btn-block btn-device" onclick="requestDisablePush()">
+                    <i class="fa fa-bell-slash" aria-hidden="true"></i>
                     Benachrichtigungen
-                    aktiviert
+                    deaktivieren
                 </button>
             </div>   
             <div class="col-sm btn-push-enabled hidden">
