--- a/views/lib/forms/form-contactHPI.hbs
+++ b/views/lib/forms/form-contactHPI.hbs
@@ -49,7 +49,8 @@
 </div>
 
 <div class="form-group">
-    <select name="category" id="category" data-placeholder="Bereich auswählen (optional)">
+    <select name="category" id="category" data-placeholder="Kategorie wählen (optional)">
+        <option value="login_registration">Anmeldung/Registrierung</option>
         <option value="dashboard">Übersicht</option>
         <option value="courses">Kurse</option>
         <option value="classes">Klassen</option>
