hide import buttons for everyone but admin

--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -61,9 +61,11 @@
                                 <button class="btn btn-secondary btn-invitation-link student">
                                     Einladungslink generieren
                                 </button>
-                                <button class="btn btn-secondary btn-import student">
-                                    Schüler importieren
-                                </button>
+                                {{#ifeq currentRole "Administrator"}}
+                                    <button class="btn btn-secondary btn-import student">
+                                        Schüler importieren
+                                    </button>
+                                {{/ifeq}}
                             </div>
                         {{/unless}}
                     </div>
