--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -38,9 +38,11 @@
                                 <button type="submit" class="btn btn-primary btn-add-modal">
                                     Lehrer hinzufügen
                                 </button>
-                                <button class="btn btn-secondary btn-import teacher">
-                                    Lehrer importieren
-                                </button>
+                                {{#ifeq currentRole "Administrator"}}
+                                    <button class="btn btn-secondary btn-import teacher">
+                                        Lehrer importieren
+                                    </button>
+                                {{/ifeq}}
                             {{/unless}}
                         </div>
                     </div>
