--- a/views/topic/components/content-internal.hbs
+++ b/views/topic/components/content-internal.hbs
@@ -1,3 +1,3 @@
 <h4>{{title}}</h4>
 <iframe src="{{content.url}}?inline=true"
-	style="width: 100%; height: 400px; overflow: auto;"></iframe>
+	style="width: 100%; height: 400px; resize: vertical; overflow: auto;"></iframe>
