--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -39,21 +39,40 @@
                     <div class="row">
                         {{> "lib/components/pagination" settings=pagination }}
                     </div>
-                    <div class="row mt-3 mb-3">
+                    <div class="row mt-3 mb-1">
+                        <p>
+                            <strong>{{ studentsWithoutConsentCount }} von {{ allStudentsCount }}</strong> Schüler in deiner Klasse benötigen noch die Einverständniserklärung zur Nutzung der {{theme.short_title}}.
+                            Schüler unter 18 Jahren brauchen zuerst das Einverständnis eines Erziehungsberechtigten, Schüler ab 14 müssen zusätzlich selbst ihr Einverständnis erklären.                        
+                        </p>
+                        
+                    </div>
+                    <div class="row mb-2">
                         <div class="col-sm-12 no-padding">
                             <h4>
                                 Einverständniserklärung einholen
                             </h4>
-                            <p>
-                                Lass deinen Schülern und deren Eltern individuelle Links zum Erklären des Einverständnisses digital oder analog zukommen. Bei Abschluss der Registrierung wird ein Loginpasswort für den Schüler erstellt.
-                            </p>
-                            <p>Für alle <strong>{{ studentsWithoutConsent }} Schüler</strong> ohne vollständige Einverständniserklärung:</p>
-                            <button class="btn btn-secondary btn-send-links-emails">
-                                Links an Schüler E-Mail Adressen senden
-                            </button>
-                            <button class="btn btn-secondary btn-print-links">
-                                Link-Druckbogen erstellen
-                            </button>
+                            {{#if schoolUsesLdap}}
+                                <strong>Schüler loggen sich in Anwesenheit eines Erziehungberechtigten ein</strong>
+                                
+                                <p>Durch Anbindung an ein Landes- oder Schulsystem können sich die Schüler bereits in der <short title> einloggen. Fordere deine Schüler auf, den ersten Login im Beisein eines Erziehungsberechtigten vorzunehmen, damit dieser sein Einverständnis erklären kann und die Registrierung abschließen kann.</p>
+                            {{else}}
+                                <strong>Lade Eltern und Schüler per Link ein, die Einverständniserklärung abzugeben</strong>
+                                <p>
+                                    Lass deinen Schülern und deren Eltern individuelle Links zum Erklären des Einverständnisses digital oder analog zukommen. Bei Abschluss der Registrierung wird ein Loginpasswort für den Schüler erstellt.
+                                </p>
+                                <p>Für alle Schüler</strong> ohne vollständige Einverständniserklärung:</p>
+                                <p>
+                                    <button class="btn btn-secondary btn-send-links-emails">
+                                        Links an Schüler E-Mail Adressen senden
+                                    </button>
+                                    <button class="btn btn-secondary btn-print-links">
+                                        Link-Druckbogen erstellen
+                                    </button>
+                                </p>
+                                <p>
+                                    Oder wähle Schüler in der Tabelle aus.
+                                </p>
+                            {{/if}}
                         </div>
                     </div>
                     <div class="row">
