--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -36,7 +36,7 @@ $fa-font-path: "/vendor-optimized/font-awesome/fonts";
 }
 
 .section-title h3 {
-	color: $primaryColor;
+	color: $fontColor;
 	font-weight: 700;
 	margin-top: 10px;
 }
