--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -436,7 +436,7 @@ footer {
     line-height: 1.75rem;
 
     h4 {
-        color: $primaryColor;
+        color: $fontColor;
         float: left;
         margin-bottom: 0px;
         margin-right: 20px;
