--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -192,17 +192,19 @@
 
                         <li class="nav-item" data-step="6" data-intro="Hier findest du Einstellungen und Log-Out.">
                             <div class="btn-group" data-matomo-mask>
-                                <button type="button" class="btn btn-secondary dropdown-toggle account-toggle"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <div class="avatar-circle" style="background:{{currentUser.avatarBackgroundColor}};" title='{{ currentUser.displayName }} ({{ currentRole }})'>
-                                        <span class="initials">{{ currentUser.avatarInitials }}</span>
-                                    </div>
-                                </button>
+                              <div class="dropdown btn-avatar">
+                                <a class="btn btn-secondary btn-thin dropdown-toggle" style="background:{{currentUser.avatarBackgroundColor}};"
+                                   title='{{ currentUser.displayName }} ({{ currentRole }})' data-toggle="dropdown">
+                                  <div class="avatar-circle" >
+                                      <span class="initials">{{ currentUser.avatarInitials }}</span>
+                                  </div>
+                                </a>
                                 <input type="hidden" name="testUserGroup" id="testUserGroup" value="{{ currentUser.testGroup }}" />
                                 <div class="dropdown-menu dropdown-menu-right">
                                     <a class="dropdown-item" href="/account/">Einstellungen</a>
                                     <a class="dropdown-item" href="/logout/">Abmelden</a>
                                 </div>
+                              </div>
                             </div>
                         </li>
                     </ul>
