--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -193,7 +193,7 @@
                         <li class="nav-item" data-step="6" data-intro="Hier findest du Einstellungen und Log-Out.">
                             <div class="btn-group" data-matomo-mask>
                               <div class="dropdown btn-avatar">
-                                <a class="btn btn-secondary btn-thin dropdown-toggle" style="background:{{currentUser.avatarBackgroundColor}};"
+                                <a class="btn btn-secondary btn-thin dropdown-toggle"
                                    title='{{ currentUser.displayName }} ({{ currentRole }})' data-toggle="dropdown">
                                   <div class="avatar-circle" >
                                       <span class="initials">{{ currentUser.avatarInitials }}</span>
