--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -564,6 +564,10 @@ footer {
           margin-left: -.75rem;
           background: transparent;
 
+          .avatar-circle{
+              background-color: $fontColor;
+          }
+
           .avatar-circle:hover{
               background-color: $colorLightGrey !important;
           }
