avatar hover adapted color

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -570,7 +570,7 @@ footer {
           }
 
           .avatar-circle:hover{
-              background-color: $colorLightGrey !important;
+              background-color: $colorDarkerGrey !important;
           }
 
           &:after{
