register for teachers

--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -62,10 +62,10 @@
                                 </p>
                                 <p>Für alle Schüler</strong> ohne vollständige Einverständniserklärung:</p>
                                 <p>
-                                    <button class="btn btn-secondary btn-send-links-emails">
+                                    <button data-role="student" class="btn btn-secondary btn-send-links-emails">
                                         Links an Schüler E-Mail Adressen senden
                                     </button>
-                                    <button class="btn btn-secondary btn-print-links">
+                                    <button data-role="student" class="btn btn-secondary btn-print-links">
                                         Link-Druckbogen erstellen
                                     </button>
                                 </p>
