--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -44,8 +44,8 @@
                             <strong>{{ studentsWithoutConsentCount }} von {{ allStudentsCount }}</strong> Schüler in deiner Klasse benötigen noch die Einverständniserklärung zur Nutzung der {{theme.short_title}}.
                             Schüler unter 18 Jahren brauchen zuerst das Einverständnis eines Erziehungsberechtigten, Schüler ab 14 müssen zusätzlich selbst ihr Einverständnis erklären.                        
                         </p>
-                        
                     </div>
+
                     <div class="row mb-2">
                         <div class="col-sm-12 no-padding">
                             <h4>
@@ -54,13 +54,13 @@
                             {{#if schoolUsesLdap}}
                                 <strong>Schüler loggen sich in Anwesenheit eines Erziehungberechtigten ein</strong>
                                 
-                                <p>Durch Anbindung an ein Landes- oder Schulsystem können sich die Schüler bereits in der <short title> einloggen. Fordere deine Schüler auf, den ersten Login im Beisein eines Erziehungsberechtigten vorzunehmen, damit dieser sein Einverständnis erklären kann und die Registrierung abschließen kann.</p>
+                                <p>Durch Anbindung an ein Landes- oder Schulsystem können sich die Schüler bereits in der {{theme.short_title}} einloggen. Fordere deine Schüler auf, den ersten Login im Beisein eines Erziehungsberechtigten vorzunehmen, damit dieser sein Einverständnis erklären kann und die Registrierung abschließen kann.</p>
                             {{else}}
                                 <strong>Lade Eltern und Schüler per Link ein, die Einverständniserklärung abzugeben</strong>
                                 <p>
                                     Lass deinen Schülern und deren Eltern individuelle Links zum Erklären des Einverständnisses digital oder analog zukommen. Bei Abschluss der Registrierung wird ein Loginpasswort für den Schüler erstellt.
                                 </p>
-                                <p>Für alle Schüler</strong> ohne vollständige Einverständniserklärung:</p>
+                                <p>Für alle Schüler ohne vollständige Einverständniserklärung:</p>
                                 <p>
                                     <button data-role="student" class="btn btn-secondary btn-send-links-emails">
                                         Links an Schüler E-Mail Adressen senden
@@ -75,6 +75,7 @@
                             {{/if}}
                         </div>
                     </div>
+
                     <div class="row">
                         {{#unless schoolUsesLdap}}
                             <div class="col-sm-12 no-padding">
