--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -39,17 +39,19 @@
                                 Einverständniserklärung einholen
                             </h4>
                             {{#if schoolUsesLdap}}
-                                <strong>Lehrer loggen sich ein</strong>
-                                
-                                <p>Durch Anbindung an ein Landes- oder Schulsystem können sich die Lehrer bereits in der <short title> einloggen. 
-                                    Fordere die Lehrer auf, den ersten Login vorzunehmen, damit diese ihr Einverständnis erklären kann und die Registrierung abschließen kann.</p>
+                                <strong>Passwörter und Einverständniserklärung</strong>
+
+                                <p>
+                                    Durch Anbindung an ein Landes- oder Schulsystem haben die Lehrer bereits ein Passwort und können sich in der {{theme.short_title}} einloggen. 
+                                    Beim ersten Login werden sie aufgefordert, ihr Einverständnis zur Nutzung der {{theme.short_title}} zu erklären .
+                                </p>
                             {{else}}
                                 <strong>Lade Lehrer per Link ein, die Einverständniserklärung abzugeben</strong>
                                 <p>
-                                    Lass deinen Lehrern individuelle Links zum Erklären des Einverständnisses digital oder analog zukommen. 
-                                    Bei Abschluss der Registrierung wird ein Loginpasswort für den Lehrer erstellt.
+                                    Lass deinen Lehrern individuelle Links zum Erklären des Einverständnisses digital oder Lass den Lehrern individuelle Links zum Abschluss der Registrierung per Mail oder analog per QR-Code-Druckbogen zukommen. 
+                                    So können sie sich ein Passwort erstellen und ihr Einverständnis zur Nutzung der {{theme.short_title}} erklären.analog zukommen. 
                                 </p>
-                                <p>Für alle Lehrer</strong> ohne vollständige Einverständniserklärung:</p>
+                                <p>Für alle Lehrer ohne vollständige Einverständniserklärung:</p>
                                 <p>
                                     <button data-role="teacher" class="btn btn-secondary btn-send-links-emails">
                                         Links an Lehrer E-Mail Adressen senden
