--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -576,6 +576,14 @@ footer {
               display: none;
           }
       }
+      .dropdown-name{
+        text-align: center;
+        padding-top: 5px;
+        padding-bottom: 10px;
+        border-bottom: solid 1px lightgrey;
+        margin-bottom: 5px;
+        cursor: default;
+      }
     }
     .minimal-button{
         .dropdown-toggle{
