--- a/views/administration/systems.hbs
+++ b/views/administration/systems.hbs
@@ -1,6 +1,6 @@
 {{#extend "administration/administration"}}
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/administration/system.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/administration/system.css') }}"/>
     {{/content}}
     {{#content "page"}}
         <div class="route-administration">
