--- a/views/team/team_guest.hbs
+++ b/views/team/team_guest.hbs
@@ -1,8 +1,8 @@
 {{#extend "lib/default"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/authentication/home.css"/>
-        <link rel="stylesheet" href="/styles/team/team.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/authentication/home.css') }}"/>
+        <link rel="stylesheet" href="{{ furl('/styles/team/team.css') }}"/>
         <style>
             header a[href='/team']{
                 background-color: #f8a41b;
@@ -11,8 +11,8 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script type="text/javascript" src="/scripts/team.js" defer></script>
-        <script type="text/javascript" src="/vendor/vanilla-tilt.min.js" defer></script>
+        <script type="text/javascript" src="{{ furl('/scripts/team.js') }}" defer></script>
+        <script type="text/javascript" src="{{ furl('/vendor/vanilla-tilt.min.js') }}" defer></script>
     {{/content}}
 
     {{#content "body"}}
