--- a/views/about/about_guest.hbs
+++ b/views/about/about_guest.hbs
@@ -1,9 +1,9 @@
 {{#extend "lib/default"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/authentication/home.css"/>
-        <link rel="stylesheet" href="/styles/partner/partner.css"/>
-        <link rel="stylesheet" href="/styles/about/about.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/authentication/home.css') }}"/>
+        <link rel="stylesheet" href="{{ furl('/styles/partner/partner.css') }}"/>
+        <link rel="stylesheet" href="{{ furl('/styles/about/about.css') }}"/>
         <style>
             header a[href='/about']{
                 background-color: #f8a41b;
@@ -12,7 +12,7 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}} 
-        <script type="text/javascript" src="/vendor/vanilla-tilt.min.js" defer></script>
+        <script type="text/javascript" src="{{ furl ('/vendor/vanilla-tilt.min.js') }}" defer></script>
     {{/content}}
 
     {{#content "body"}}
