--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -1,10 +1,10 @@
 {{#extend "lib/loggedin"}}
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/account/settings.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/account/settings.css') }}"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/settings.js" type="text/javascript" defer></script>
+        <script src="{{ furl('/scripts/settings.js') }}" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
