--- a/views/administration/classes-manage.hbs
+++ b/views/administration/classes-manage.hbs
@@ -1,11 +1,11 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/administration/classes/manage.js" type="text/javascript" defer></script>
+        <script src="{{ furl('/scripts/administration/classes/manage.js') }}" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/classes/classes.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/classes/classes.css') }}"/>
     {{/content}}
 
     {{#content "page"}}
