--- a/views/administration/classes.hbs
+++ b/views/administration/classes.hbs
@@ -1,6 +1,6 @@
 {{#extend "administration/administration"}}
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/lib/filter/filter.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/lib/filter/filter.css') }}"/>
     {{/content}}
     {{#content "page"}}
         <div class="route-administration">
