--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -1,7 +1,7 @@
 {{#extend "administration/administration"}}
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/lib/filter/filter.css"/>
-        <link rel="stylesheet" href="/styles/administration/users.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/lib/filter/filter.css') }}"/>
+        <link rel="stylesheet" href="{{ furl('/styles/administration/users.css') }}"/>
     {{/content}}
     {{#content "page"}}
         <div class="route-administration">
