--- a/views/content/store.hbs
+++ b/views/content/store.hbs
@@ -1,13 +1,13 @@
 {{#extend "lib/loggedin" hideSearch="true"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/content/content.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/content/content.css') }}"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/content.js" type="text/javascript" defer></script>
-        <script src="/scripts/filter/custom-element-polyfill.js" defer></script>
-        <script src="/scripts/filter/feathers-filter.js" defer></script>
+        <script src="{{ furl('/scripts/content.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl('/scripts/filter/custom-element-polyfill.js') }}" defer></script>
+        <script src="{{ furl('/scripts/filter/feathers-filter.js') }}" defer></script>
     {{/content}}
 
     {{#content "page"}}
