--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -1,17 +1,17 @@
 {{#extend "lib/loggedin" notitle="true"}}
 
   {{#content "styles" mode="append"}}
-    <link rel="stylesheet" href="/styles/courses/course.css" />
-    <link rel="stylesheet" href="/styles/homework/homework.css" />
-    <link rel="stylesheet" href="/vendor/jquery/jquery-ui.css" />
+    <link rel="stylesheet" href="{{ furl('/styles/courses/course.css') }}" />
+    <link rel="stylesheet" href="{{ furl('/styles/homework/homework.css') }}" />
+    <link rel="stylesheet" href="{{ furl('/vendor/jquery/jquery-ui.css') }}" />
   {{/content}}
 
   {{#content "scripts" mode="append"}}
-    <script src="/scripts/jquery/jquery-ui.min.js" type="text/javascript" defer></script>
-    <script src="/scripts/jquery/jquery.ui.touch-punch.js" type="text/javascript" defer></script>
-    <script src="/scripts/courses.js" type="text/javascript" defer></script>
-    <script src="/scripts/topic.js" type="text/javascript" defer></script>
-    <script src="/scripts/tabbar.js" type="text/javascript" defer></script>
+    <script src="{{ furl('/scripts/jquery/jquery-ui.min.js') }}" type="text/javascript" defer></script>
+    <script src="{{ furl('/scripts/jquery/jquery.ui.touch-punch.js') }}" type="text/javascript" defer></script>
+    <script src="{{ furl('/scripts/courses.js') }}" type="text/javascript" defer></script>
+    <script src="{{ furl('/scripts/topic.js') }}" type="text/javascript" defer></script>
+    <script src="{{ furl('/scripts/tabbar.js') }}" type="text/javascript" defer></script>
   {{/content}}
 
   {{#content "page"}}
