--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -1,18 +1,18 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/courses/course.css"/>
-        <link rel="stylesheet" href="/styles/lib/spectrum/spectrum.css"/>
-        <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/courses/course.css') }}"/>
+        <link rel="stylesheet" href="{{ furl('/styles/lib/spectrum/spectrum.css') }}"/>
+        <link rel="stylesheet" href="{{ furl('/styles/lib/datetimepicker/jquery.datetimepicker.min.css') }}"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/jquery/datetimepicker-easy.js" type="text/javascript" defer></script>
-        <script src="/scripts/moment/moment.js" type="text/javascript" defer></script>
-        <script src="/scripts/courses.js" type="text/javascript" defer></script>
-        <script src="/scripts/coursesTimes.js" type="text/javascript" defer></script>
-        <script src="/scripts/spectrum/spectrum.js" type="text/javascript" defer></script>
-        <script src="/scripts/spectrum/init.js" type="text/javascript" defer></script>
+        <script src="{{ furl('/scripts/jquery/datetimepicker-easy.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl('/scripts/moment/moment.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl('/scripts/courses.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl('/scripts/coursesTimes.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl('/scripts/spectrum/spectrum.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl('/scripts/spectrum/init.js') }}" type="text/javascript" defer></script>
     {{/content}}
 
 
