--- a/views/files/lool.hbs
+++ b/views/files/lool.hbs
@@ -1,12 +1,12 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/files/files.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/files/files.css') }}"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/files.js" type="text/javascript" defer></script>
-        <script src="/scripts/jquery.cookie.js" type="text/javascript" defer></script>
+        <script src="{{ furl('/scripts/files.js') }}" type="text/javascript" defer></script>
+        <script src="{{ furl('/scripts/jquery.cookie.js') }}" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
