--- a/views/imprint/imprint_guests.hbs
+++ b/views/imprint/imprint_guests.hbs
@@ -1,8 +1,8 @@
 {{#extend "lib/default"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/authentication/home.css"/>
-        <link rel="stylesheet" href="/styles/imprint/imprint.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/authentication/home.css') }}"/>
+        <link rel="stylesheet" href="{{ furl('/styles/imprint/imprint.css') }}"/>
         <style>
             body {
                 background: #e6e2e2;
