--- a/views/lib/error.hbs
+++ b/views/lib/error.hbs
@@ -1,7 +1,7 @@
 {{#if loggedin}}
     {{#extend "lib/loggedin"}}
         {{#content "styles" mode="append"}}
-            <link rel="stylesheet" href="/styles/lib/error.css"/>
+            <link rel="stylesheet" href="{{ furl( '/styles/lib/error.css') }}"/>
         {{/content}}
         {{#content "page"}}
             {{#embed "lib/error_content"}}{{/embed}}
@@ -10,8 +10,8 @@
 {{else}}
     {{#extend "lib/default"}}
         {{#content "styles" mode="append"}}
-            <link rel="stylesheet" href="/styles/authentication/home.css"/>
-            <link rel="stylesheet" href="/styles/lib/error.css"/>
+            <link rel="stylesheet" href="{{ furl( '/styles/authentication/home.css') }}"/>
+            <link rel="stylesheet" href="{{ furl( '/styles/lib/error.css') }}"/>
         {{/content}}
 
         {{#content "body"}}
