--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -1,8 +1,8 @@
 {{#extend "lib/default"}}
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/lib/loggedin.css"/>
-        <link rel="stylesheet" href="/styles/lib/feedback-button.css"/>
-        <link rel="stylesheet" href="/vendor/introjs/introjs.min.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/lib/loggedin.css') }}"/>
+        <link rel="stylesheet" href="{{ furl('/styles/lib/feedback-button.css') }}"/>
+        <link rel="stylesheet" href="{{ furl('/vendor/introjs/introjs.min.css') }}"/>
         <noscript><style>
             .section-title,
             #main-content,
@@ -14,12 +14,12 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script type="text/javascript" src="/vendor-optimized/firebasejs/3.9.0/firebase-app.js" defer></script>
-        <script type="text/javascript" src="/vendor-optimized/firebasejs/3.9.0/firebase-messaging.js" defer></script>
-        <script src="/scripts/loggedin.js" type="text/javascript" defer></script>
-        <script type="text/javascript" src="/vendor-optimized/mathjax/MathJax.js?config=TeX-AMS_HTML" defer></script>
-        <script type="text/javascript" src="/vendor/introjs/intro.min.js" defer></script>
-        <script type="text/javascript" src="/vendor/feathersjs/feathers.js" defer></script>
+        <script type="text/javascript" src="{{ furl('/vendor-optimized/firebasejs/3.9.0/firebase-app.js') }}" defer></script>
+        <script type="text/javascript" src="{{ furl('/vendor-optimized/firebasejs/3.9.0/firebase-messaging.js') }}" defer></script>
+        <script src="{{ furl('/scripts/loggedin.js') }}" type="text/javascript" defer></script>
+        <script type="text/javascript" src="{{ furl('/vendor-optimized/mathjax/MathJax.js?config=TeX-AMS_HTML') }}" defer></script>
+        <script type="text/javascript" src="{{ furl('/vendor/introjs/intro.min.js') }}" defer></script>
+        <script type="text/javascript" src="{{ furl('/vendor/feathersjs/feathers.js') }}" defer></script>
     {{/content}}
 
     {{#content "body"}}
