--- a/views/partner/partner_guests.hbs
+++ b/views/partner/partner_guests.hbs
@@ -1,12 +1,12 @@
 {{#extend "lib/default"}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/partners.js" type="text/javascript" defer></script>
+        <script src="{{ furl('/scripts/partners.js') }}" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/partner/partner.css"/>
-        <link rel="stylesheet" href="/styles/authentication/home.css"/>
+        <link rel="stylesheet" href="{{ furl('/styles/partner/partner.css') }}"/>
+        <link rel="stylesheet" href="{{ furl('/styles/authentication/home.css") }}/>
         <style>
             body {
                 background: #e6e2e2;
