--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -164,12 +164,16 @@
                     </a>
                 </div>
             </div>
+            <div class="single-award col-xs-12 col-md-3">
+                <div class="single-award-wrapper">
+                    <a href="https://hpi.de/pressemitteilungen/2017/schul-cloud-als-ausgezeichneter-ort-2017-praemiert.html" target="_blank">
+                        <b class="single-award-title">Ernennung zum „Ausgezeichneten Ort“ im bundesweiten Wettbewerb „Land der Ideen“</b>
+                        <br/>
+                        <img class="single-award-thumbnail" src="/images/awards/Land-der-Ideen-2017.jpg" />
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
-    <p>Ernennung zum <a
-            href="https://hpi.de/pressemitteilungen/2017/schul-cloud-als-ausgezeichneter-ort-2017-praemiert.html"
-            target="_blank">„Ausgezeichneten Ort“</a> im bundesweiten Wettbewerb <a href="https://land-der-ideen.de"
-                                                                                    target="_blank">„Land der Ideen“</a>.
-    </p>
 
 </section>
