aj/help sasslint (#928)
* added basic live-search (without styling)

* integrated confluence via iFrame

TODO: update security policys in confluence

* refactored livesearch

* moved file

* bugfixing and code cleanup

* new more subtile loading animation

* Moved MathJax to submodule

* added feathersjs to local vendors

* added firebase and firebase-messaging to local vendors

* added contact form

* create component card +styling

* added some styles to the livesearch

* Kontaktformular styling

* wip

* finished contact form design

* first steps card ready

* added mathjax via npm

* Email card ready

* auto generate tutorial cards

* "Wissenswertes"-card ready

* "Nutzungshilfen" ready

* minor accessibility changes

* some formatting

* use the node module instead of a hard copy

* dependencies updated

* improved loading animation

* make loops more robust

* use folder vendor-optimized for already minified ressources

* cleanup

* Revert "dependencies updated"

This reverts commit 5e1420f42fd40eed49df9af399a0ad30b7ac7b22.

* moved files to vendor-optimized

* WIP

* copy node_modules to vendor-optimized

* update mathjax location in serviceworker

* added git change requests

* test + little fix

* accordion cards finished

* fix scroll issue and some minor style changes

* improved focus handling

* in clickable-card ausgelagert

* add Bootstrap grid for mobile

* remove echo from @mxrcx

* eMail card + ids

* added list of content

* restored releases

* remove old /release route

* E-Mail card text-Update

* layout prototype

* some iFrame changes

* fix page not loading

* some style refactoring

* minor style changes & new forms

* fix accessibility issue

* added code to display iFrame in full height

* code cleanup

* removed faq page because it's a conflunece page

* some refactoring & forms are working now

* disabled first steps


--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -717,11 +717,9 @@ footer {
         display: none;
     }
 
-    .form-group {
-        sup {
-            color: red;
-            font-size: 16px;
-        }
+    .form-group sup {
+        color: red;
+        font-size: 16px;
     }
 }
 
