--- a/views/planner/editInstace.hbs
+++ b/views/planner/editInstace.hbs
@@ -6,7 +6,7 @@
 {{/content}}
 
 {{#content "styles" mode="append"}}
-<link rel="stylesheet" href="/styles/courses/course.css" />
+<link rel="stylesheet" href="/styles/planner/planner.css" />
 {{/content}}
 
 {{#content "page"}}
