Always show GitHub in Footer

--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -18,6 +18,8 @@
                 <a href="/community" target="_blank">Mitmachen</a>
                 <span> - </span>
                 <a href="/partner" target="_blank">Partner</a>
+                <span> - </span>
+                <a href="https://github.com/schul-cloud/" target="_blank">GitHub</a>
             </div>
             <div>
                 <p class="made-with-love">Made with <span class="heart">❤</span> in Potsdam</p>
